CheckIn:Refactor code by findBugs